I make one function to enlarge or diminish one number in a closure and then I set the button to do disminuir(); to diminish the initial size of the box too. Now I can enlarge or diminish the size, but I can't show the number between the buttons :c , that is something for tomorrow

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#If you are reading this and you're interested in my code, thank you so much, I send you my regards
